--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
+@media only screen and (max-width: 1000px) and (min-width: 500px) {
+    body {
+        background-color: red;
+        font-family: times;
+        }
+}
+
+@media print {
+  body{
+    color: #000 !important;
+  }
+}
+
 .column1 {
   width: 500px;
   float: left;
